--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
   "license": "ISC",
   "devDependencies": {
     "@types/cookie-parser": "^1.4.6",
+    "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/express-fileupload": "^1.4.4",
+    "@types/multer": "^1.4.11",
     "@typescript-eslint/eslint-plugin": "^7.0.2",
     "@typescript-eslint/parser": "^7.0.2",
     "eslint": "^8.57.0",
@@ -46,11 +48,11 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
-    "express-fileupload": "^1.4.3",
     "fileupload": "^0.2.1",
     "http-status": "^1.7.4",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.2.0",
+    "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.10",
     "zod": "^3.22.4"
   }
